--- a/templates/success.html
+++ b/templates/success.html
@@ -1,56 +1,51 @@
 <!DOCTYPE html>
 <html lang="eng">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href={{url_for('static' , filename = 'css/normalize.css')}}>
+        <link rel="stylesheet" href={{url_for('static' , filename = 'css/grid.css')}}>
+        <link rel='stylesheet' href={{url_for('static' , filename = 'css/styleSucc.css')}}>
+        
+        <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;1,300&display=swap" rel="stylesheet" type='text/css'>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+        <title>Pep Doctor</title>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href={{url_for('static' , filename='css/normalize.css' )}}>
-    <link rel="stylesheet" href={{url_for('static' , filename='css/grid.css' )}}>
-    <link rel='stylesheet' href={{url_for('static' , filename='css/styleSucc.css' )}}>
+        <style type="text/css">
+            th{
+                text-align: center;
+                font-size: 20px;
+            }
 
-    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;1,300&display=swap"
-        rel="stylesheet" type='text/css'>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <title>Results Page</title>
+            td{
+                text-align: center;
+                font-size: 18px;
+            }
+        </style>
+    </head>
+    <body>
+        <div class = "second-main" style = "height: 100% , %">
+            <nav>
+                <ul style = "padding-right: 2%;" class = "main-nav">
+                    <li><a href ="/">HomePage</a></li>                
+                </ul>
+               
+            </nav>
+            <div class = "header">
+                <row style = "width: 100% ; display: flex; justify-content: center;">
+                    <h3 class="header-text">Uploaded Image</h3>
+                </row>
+                <row style = "display: flex; justify-content: center;">
+                    <img class = "result-img" src={{url_for('static', filename = 'images/'+ img)}}>
+                </row>
+            </div>
 
-    <style type="text/css">
-        th {
-            text-align: center;
-            font-size: 20px;
-        }
-
-        td {
-            text-align: center;
-            font-size: 18px;
-        }
-    </style>
-</head>
-
-<body>
-    <div class="second-main" style="height: 100% , %">
-        <nav>
-            <ul style="padding-right: 2%;" class="main-nav">
-                <li><a href="/">HomePage</a></li>
-            </ul>
-
-        </nav>
-        <div class="header">
-            <row style="width: 100% ; display: flex; justify-content: center;">
-                <h3 class="header-text">Uploaded Image</h3>
-            </row>
-            <row style="display: flex; justify-content: center;">
-                <img class="result-img" src={{url_for('static', filename='images/' + img)}}>
-            </row>
+            <div class = "info">
+            
+                <row style = "width: 100% ; display: flex; justify-content: center;">
+                    <h3 class = "header-text">{{output}}</h3>
+                </row>
+            </div>
         </div>
-
-        <div class="info">
-
-            <row style="width: 100% ; display: flex; justify-content: center;">
-                <h3 class="header-text"> {{output}}</h3>
-            </row>
-        </div>
-    </div>
-</body>
-
+    </body>
 </html>
